@@ -7,6 +7,7 @@ v0.3.1-dev, 2009-09-16
 Version 0.3.1 (under dev!)
 --------------------------
 
+* alias: fix bug with arguments (bug #27440)
 * irc: add options for CTCP, to block/customize CTCP reply (task #9693)
 * irc: add missing CTCP: clientinfo, finger, source, time, userinfo (task #7270)
 * gui: fix /input history_global_next: reset input content when last command in
